--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -71,6 +71,15 @@ $overpass: 'Overpass', sans-serif;
   font-weight: 300i;
 }
 
+@mixin faqIntro {
+  font-size: rem-calc(18);
+  font-style: italic;
+  font-weight: 300i;
+  letter-spacing: rem-calc(0.6);
+  line-height: 1.4;
+  text-decoration: none;
+}
+
 a {
   &:any-link {
     color: $red;
