--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,7 +32,7 @@
 
     width: 75%;
 
-    @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+    @media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
       @include bodyCopySmall();
       width: 100%;
     }
@@ -109,5 +109,34 @@
     &:last-of-type {
       padding-bottom: 0;
     }
+  }
+
+  &__bio {
+    border-bottom: 1px solid $red;
+    padding-bottom: rem-calc(7);
+    padding-top: rem-calc(7);
+  }
+
+  &__bio-row {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+  }
+
+  &__bio-photo {
+    margin: rem-calc(15 0 10);
+    width: 35%;
+
+    @media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+      width: 100%;
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &__bio-paragraph {
+    margin-bottom: rem-calc(15);
   }
 }
