--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,6 @@
 @import "./utils";
 @import "./faq";
 @import "./links";
-@import "../components/header/_header";
 
 * {
   margin: 0;
@@ -19,7 +18,7 @@
 .main {
   &__row {
     max-width: 960px;
-    padding: 1.45rem 1rem;
+    padding: 1.45rem 1rem 0;
   }
 
   &__page-title {
@@ -32,6 +31,11 @@
     @include bodyCopy();
 
     width: 75%;
+
+    &--preamble {
+      border-bottom: 1px solid $red;
+      padding-bottom: rem-calc(7);
+    }
 
     @media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
       @include bodyCopySmall();
