--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,10 +21,12 @@
     padding: 1.45rem 1rem 0;
   }
 
-  &__page-title {
+  &__page-title,
+  &__post-title {
     @include pageTitle();
 
     margin-bottom: rem-calc(20);
+    width: 75%;
   }
 
   &__body-copy {
@@ -35,6 +37,23 @@
     &--preamble {
       border-bottom: 1px solid $red;
       padding-bottom: rem-calc(7);
+    }
+
+    &--post {
+      h3 {
+        padding-bottom: rem-calc(20);
+      }
+
+      h4 {
+      }
+
+      p {
+        padding-bottom: rem-calc(15);
+      }
+
+      ul {
+        padding-left: rem-calc(35);
+      }
     }
 
     @media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
